# akonadi-microsoft365

./: .gitignore  CMakeLists.txt  IMPLEMENTATION.md  Messages.sh  README.md  REUSE.toml  graphconfig.cpp  graphconfig.json  graphconfigdialog.cpp  graphconfigdialog.h  graphmtaresource.cpp  graphmtaresource.desktop  graphmtaresource.h  graphresource.cpp  graphresource.desktop  graphresource.h  graphresource.kcfg  graphsettingsbase.kcfgc  graphsyncstateattribute.cpp  graphsyncstateattribute.h
autotests/: CMakeLists.txt  graphcontacthandlertest.cpp  grapheventhandlertest.cpp  graphmailhandlertest.cpp  graphsyncstateattributetest.cpp  graphtodohandlertest.cpp
calendar/: grapheventhandler.cpp  grapheventhandler.h
contact/: graphcontacthandler.cpp  graphcontacthandler.h
docs/: azure-setup.md
graphclient/: CMakeLists.txt  graphclient.cpp  graphclient.h  graphrequest.cpp  graphrequest.h
graphclient/auth/: graphoauth.cpp  graphoauth.h
jobs/: graphbatchjob.cpp  graphbatchjob.h  graphfetchfoldersjob.cpp  graphfetchfoldersjob.h  graphfetchitempayloadjob.cpp  graphfetchitempayloadjob.h  graphfetchitemsjob.cpp  graphfetchitemsjob.h  graphfetchpimitemsjob.cpp  graphfetchpimitemsjob.h  graphmigrateidsjob.cpp  graphmigrateidsjob.h
mail/: graphmailhandler.cpp  graphmailhandler.h
todo/: graphtodohandler.cpp  graphtodohandler.h
tools/: akonadifetchtest.cpp  graph_probe.py  graphsmoketest.cpp  phase4check.cpp  sendtest.cpp  specialcheck.cpp  writetest.cpp
